@@ -2231,12 +2231,15 @@ pkl_asm_label (pkl_asm pasm, pvm_program_label label)
   pvm_program_append_label (pasm->program, label);
 }
 
-void
+char *
 pkl_asm_from_string (pkl_asm pasm, const char *str)
 {
   char *expanded_template
     = pvm_program_expand_asm_template (str);
 
-  pvm_program_parse_from_string (expanded_template, pasm->program);
+  char *ret
+    = pvm_program_parse_from_string (expanded_template, pasm->program);
   free (expanded_template);
+
+  return ret;
 }
