@@ -1,3 +1,13 @@
+2023-02-04  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-gen.c (pkl_gen_pr_asm_stmt): Emit error whenever
+	necessary.
+	(pkl_gen_pr_asm_exp): Likewise.
+
+	* libpoke/pvm-program.c (pvm_program_parse_from_string): Return an
+	error status in the form of an error message.
+	* libpoke/pkl-asm.c (pkl_asm_from_string): Likewise.
+
 2023-02-03  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-tab.y (declaration): improve error message.
